[package]
name = "prettify_pinyin"
version = "0.1.0"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
description = "Turn tone numbers into tone marks"
repository = "https://github.com/sotch-pr35mac/prettify_pinyin"
readme = "README.md"
keywords = ["pinyin", "chinese", "convert pinyin, "hanzi"]
categories = ["localization", "value-formatting"]
license = "MIT"
license-file = "LICENSE"
maintenance = { status = "passively-maintined" }