[package]
name = "prettify_pinyin"
version = "1.0.1"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
description = "Turn tone numbers into tone marks"
repository = "https://github.com/sotch-pr35mac/prettify_pinyin"
readme = "README.md"
keywords = ["pinyin", "chinese", "hanzi"]
categories = ["localization", "value-formatting"]
license = "MIT"
